Fixed some warnings and empty catch blocks
Cleaned up the code by fixing some warnings. Also, filled empty catch
blocks to output error caught using System.err.println